--- a/src/app/dashboard/discord/discordapi/discordapi.component.html
+++ b/src/app/dashboard/discord/discordapi/discordapi.component.html
@@ -1,6 +1,6 @@
 <nb-card status="primary" class="centered">
     <nb-card-header>
-      <h1>Discord Functions</h1>
+      <h1>Discord API & Connections</h1>
     </nb-card-header>
     <nb-card-body>
 
