--- a/src/app/auth/login/login.component.scss
+++ b/src/app/auth/login/login.component.scss
@@ -1,13 +1,29 @@
 
-
-nb-card-body {
+nb-card-header {
   display: flex;
-  flex-direction: column;
-  justify-content: space-evenly;
   align-items: center;
+  justify-content: space-between;
+  background-color: #a16eff42;
+  > img {
+    flex-grow: 1;
+    min-width: 100px;
+  }
+  > div {
+    display: flex;
+    flex-direction: column;
+    margin-left: 2rem;
+    flex-shrink: 0;
+  }
 }
 
-nb-card-header, 
-p {
-  text-align: center;
+.login-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 2rem 3rem;
+}
+
+
+li {
+  margin-top: .5rem;
 }
