--- a/src/app/auth/profile/profile.component.html
+++ b/src/app/auth/profile/profile.component.html
@@ -1,3 +1,41 @@
 
-<p>Coming soon!</p>
-<a routerLink="/">Go back to your dashboard</a>
+
+
+<nb-card>
+
+    <nb-card-header>
+      <img src="assets/brand/logo-white.png">
+      <div>
+        <h1>Welcome to cCarbn</h1>
+        <ng-template *ngIf="false else login"></ng-template>
+      </div>
+    </nb-card-header>
+  
+    <nb-card-body>
+        <h3>
+            Profile
+        </h3>
+        <p>
+            Coming soon!
+        </p>
+        <p>
+            <a routerLink="/">Go back to your dashboard</a>
+        </p>
+    </nb-card-body>
+  
+    <ng-template *ngIf="false else login"></ng-template>
+  
+</nb-card>
+  
+<ng-template #login>
+    <div *ngIf="auth.currentUser" class="login-container">
+        <button nbButton
+                status="warning" 
+                (click)="auth.logout()" 
+                fullWidth>
+        LOGOUT
+        </button>
+    </div>
+</ng-template>
+  
+<div style="height:40vh;">&nbsp;</div>
