--- a/src/app/auth/token/token.component.html
+++ b/src/app/auth/token/token.component.html
@@ -1,5 +1,4 @@
 
-
 <nb-card size="small">
   <nb-card-header>Login With Twitch</nb-card-header>
   <nb-card-body>
@@ -7,3 +6,4 @@
   </nb-card-body>
 </nb-card>
 
+<div style="height:50vh;">&nbsp;</div>
