--- a/src/app/dashboard/home/home.component.html
+++ b/src/app/dashboard/home/home.component.html
@@ -19,7 +19,7 @@
       The <a routerLink="/browsersource/hypetrain">Hype Train</a> functionality works but it's kinda complicated to set-up and the user interface is not intuitive yet...
     </p>
     <p>
-      The <a routerLink="twitch/chatbot">Chatbot</a> can do for you...
+      Check out what the <a routerLink="twitch/chatbot">Chatbot</a> can do for you...
     </p>
     
   </nb-card-body>
