added color to chatbot categories header

--- a/src/app/dashboard/twitch/chatbot/chatbot.component.scss
+++ b/src/app/dashboard/twitch/chatbot/chatbot.component.scss
@@ -29,6 +29,8 @@ nb-accordion-item-header {
   > *:not(:last-child) {
     margin-right: 2rem
   }
+  background-color: $inner-element-background;
+  border-radius: 5px
 }
 
 .storeable-header {
