--- a/src/themes.scss
+++ b/src/themes.scss
@@ -137,3 +137,28 @@ nb-select.size-medium:not(.full-width) {
 .layout {
   min-height: 100% !important;
 }
+
+
+.streamer-mode :not(.on) {
+  transition: 0.3s;
+}
+.on {
+  position: relative;
+  transition: 0.3s;
+  > nb-icon:first-child {
+    position: absolute;
+    left: calc(50% - 10px);
+    top: calc(50% - 10px);
+    transition: 0.3s;
+  }
+  > nb-icon:first-child:hover {
+    transform-origin: center;
+    transform: scale(1.25);
+    filter: drop-shadow(0 0 6px white);
+    transition: 0.3s;
+  }
+  > *:not(:first-child) {
+    filter: blur(5px) drop-shadow(2px 4px 6px #000000A0);
+    pointer-events: none;
+  }
+}
