--- a/src/app/dashboard/twitch/elements/elements.component.html
+++ b/src/app/dashboard/twitch/elements/elements.component.html
@@ -2,8 +2,8 @@
 <nb-layout><nb-layout-column>
 
 
-<nb-card class="global-card centered" status="primary">
-    <nb-card-header>
+<nb-card class="global-card centered">
+    <nb-card-header class="card-header">
         GLOBAL SETTINGS
     </nb-card-header>
     <nb-card-body>
