--- a/src/app/dashboard/discord/discordapi/discordapi.component.html
+++ b/src/app/dashboard/discord/discordapi/discordapi.component.html
@@ -1,5 +1,5 @@
-<nb-card status="primary" class="centered">
-    <nb-card-header>
+<nb-card class="centered">
+    <nb-card-header class="card-header">
       <h1>Discord API & Connections</h1>
     </nb-card-header>
     <nb-card-body>
