--- a/src/app/dashboard/home/home.component.html
+++ b/src/app/dashboard/home/home.component.html
@@ -1,5 +1,5 @@
-<nb-card status="primary" class="centered">
-  <nb-card-header>
+<nb-card class="centered">
+  <nb-card-header class="card-header">
     <div class="composed-title">
       <strong class="text-title">Welcome to cCarbn.io</strong>
       <span class="text-description">For the best experience, use this on desktop</span>
