--- a/src/app/auth/profile/profile.component.scss
+++ b/src/app/auth/profile/profile.component.scss
@@ -20,5 +20,11 @@ nb-card-header {
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 2rem 3rem;
-}
+    padding: 3rem 0;
+  }
+  @media only screen and (min-width: 825px) {
+    .login-container {
+      padding: 3rem 2rem;
+    }
+  }
+  
