--- a/src/app/auth/login/login.component.scss
+++ b/src/app/auth/login/login.component.scss
@@ -12,8 +12,9 @@ nb-card-header {
   > div {
     display: flex;
     flex-direction: column;
-    margin-left: 2rem;
-    //flex-shrink: 0;
+    margin-left: 1rem;
+    max-width: 50vw;
+    text-align: right;
   }
 }
 
