--- a/src/app/auth/profile/profile.component.scss
+++ b/src/app/auth/profile/profile.component.scss
@@ -21,7 +21,7 @@ nb-card-header {
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 3rem 0;
+    padding: 3rem 1rem;
   }
   @media only screen and (min-width: 825px) {
     .login-container {
