--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -79,7 +79,7 @@
             fullWidth
             (click)="loginWithTwitch()" 
             >
-      LOG IN WITH TWITCH
+      TWITCH LOGIN
     </button>
   </div>
   <div *ngIf="auth.currentUser" class="login-container">
