--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -13,9 +13,8 @@
   <nb-card-body>
     <h3>What is cCarbn</h3>
     <p>
-      Interact with Twitch chat and events
-      (subs, bits, hype trains, predictions etc)
-      through chat or via Browser-Source-ready dynamic pages.
+      Interact with Twitch events and chat
+      via Browser-Source-ready dynamic pages or chatbot.
     </p>
     <h3>Features</h3>
     <p>
