--- a/src/app/dashboard/twitch/chatbot/chatbot.component.scss
+++ b/src/app/dashboard/twitch/chatbot/chatbot.component.scss
@@ -23,6 +23,6 @@ nb-accordion-item-header {
   .description {
     color: rgba(white, .4);
     font-style: italic;
-    white-space: pre-line;
+    white-space: break-spaces;
   }
 }
